...
    android:layout_marginTop="25dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="25dp"
    android:background="#E9E9E9" />

  <Switch
    android:id="@+id/add_list_download_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    android:text="@string/list_download_sheet"
...
  <View
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="1" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/add_list_create_button"
    style="@style/AppTheme.RoundedCornerMaterialButtonFilled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/list_create_button"
    android:textAllCaps="false" />

...
