<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="30dp"
  android:paddingBottom="30dp"
  android:paddingStart="30dp"
  android:paddingEnd="30dp"
  android:orientation="vertical"
  android:theme="@style/Widget.AppTheme.BottomSheet">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/filter_key_title"
    android:textColor="@color/darkTitle"
    android:textSize="22sp" />

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginStart="10dp"
    android:fillViewport="false">

    <RadioGroup
      android:id="@+id/filter_key_radio"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <RadioButton
        android:id="@+id/filter_key_any"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_any" />

      <RadioButton
        android:id="@+id/filter_key_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pitch_a" />

      <RadioButton
        android:id="@+id/filter_key_bb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pitch_bb" />

      <RadioButton
        android:id="@+id/filter_key_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pitch_b" />

      <RadioButton
        android:id="@+id/filter_key_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pitch_c" />

      <RadioButton
        android:id="@+id/filter_key_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pitch_db" />

      <RadioButton
        android:id="@+id/filter_key_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pitch_d" />

      <RadioButton
        android:id="@+id/filter_key_eb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pitch_eb" />

      <RadioButton
        android:id="@+id/filter_key_e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pitch_e" />

      <RadioButton
        android:id="@+id/filter_key_f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pitch_f" />

      <RadioButton
        android:id="@+id/filter_key_gb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pitch_gb" />

      <RadioButton
        android:id="@+id/filter_key_g"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pitch_g" />

      <RadioButton
        android:id="@+id/filter_key_ab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pitch_ab" />

    </RadioGroup>

  </androidx.core.widget.NestedScrollView>

</LinearLayout>