...
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="2dp"
    android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/filter_parts"
      style="@style/AppTheme.RoundedCornerMaterialButton"
      android:layout_width="wrap_content"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="@dimen/filter_button_separator"
      android:text="@string/filter_parts_title" />

...
      android:layout_width="wrap_content"
      android:layout_marginStart="@dimen/filter_button_separator"
      android:layout_marginEnd="@dimen/filter_button_separator"
      android:text="@string/filter_sheet_music_title" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/filter_learning_tracks"
      style="@style/AppTheme.RoundedCornerMaterialButton"
      android:layout_width="wrap_content"
      android:layout_marginStart="@dimen/filter_button_separator"
      android:layout_marginEnd="@dimen/filter_button_separator"
      android:text="@string/filter_learning_tracks_title" />

...
