...
      android:text="@string/tag_menu_lists"
      android:textColor="@color/lightSecondaryTitle"
      android:textSize="12sp"
      android:theme="@style/PrimaryFlatButton" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/tag_detail_rate_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:drawableTop="@drawable/star_transparent"
      android:drawablePadding="2dp"
...
