package com.spelder.tagyourit.ui;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.junit.Assert.assertEquals;

import android.os.SystemClock;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;
import androidx.test.espresso.ViewInteraction;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import com.spelder.tagyourit.R;
import com.spelder.tagyourit.db.TagDb;
import com.spelder.tagyourit.model.Tag;
import com.spelder.tagyourit.networking.api.SortBuilder;
import com.spelder.tagyourit.networking.api.SortBy;
import com.spelder.tagyourit.networking.api.filter.FilterBuilder;
import java.io.File;
import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@RunWith(AndroidJUnit4.class)
@LargeTest
public class TestAddFavorite {
  @Rule
  public final ActivityTestRule<MainActivity> mActivityRule =
      new ActivityTestRule<>(MainActivity.class);

  private static Matcher<View> childAtPosition(
      final Matcher<View> parentMatcher, final int position) {

    return new TypeSafeMatcher<View>() {
      @Override
      public void describeTo(Description description) {
        description.appendText("Child at position " + position + " in parent ");
        parentMatcher.describeTo(description);
      }

      @Override
      public boolean matchesSafely(View view) {
        ViewParent parent = view.getParent();
        return parent instanceof ViewGroup
            && parentMatcher.matches(parent)
            && view.equals(((ViewGroup) parent).getChildAt(position));
      }
    };
  }

  @Before
  public void init() {
    TagDb db = new TagDb(mActivityRule.getActivity());
    db.deleteAllFavorites();

    FilterBuilder filter =
        new FilterBuilder(mActivityRule.getActivity(), db.getDefaultList().getDbId().toString());
    filter.applyDefaultFilter();

    SortBuilder sort = new SortBuilder(mActivityRule.getActivity());
    sort.setSortBy(SortBy.TITLE);
  }

  @Test
  public void addFavoriteBrowse() {
    String tag_title = "'Less You Listen";

    // Start the screen of your activity.
    onView(withId(R.id.nav_browse)).perform(click());

    onView(allOf(withId(R.id.tag_list_title), withText(tag_title))).perform(click());

    onView(withId(R.id.action_add_to_default_list)).perform(click());

    onView(withId(R.id.nav_lists)).perform(click());

    onData(anything()).inAdapterView(withId(android.R.id.list)).atPosition(0).perform(click());

    TestUtility.unFavoriteTag(tag_title);
  }

  @Test
  public void addFavoritesSearch() {
    String tagTitle1 = "Lost";
    String tagTitle2 = "Love Me and the World is Mine";
    String tagTitle3 = "Tonight, Tonight";

    TestUtility.favoriteTag(tagTitle1 + " Soren");
    TestUtility.favoriteTag(tagTitle2 + " David");
    TestUtility.favoriteTag(tagTitle3 + " Island Boys");

    onView(withId(R.id.nav_lists)).perform(click());

    onData(anything()).inAdapterView(withId(android.R.id.list)).atPosition(0).perform(click());

    TestUtility.unFavoriteTag(tagTitle1);
    TestUtility.unFavoriteTag(tagTitle2);
    TestUtility.unFavoriteTag(tagTitle3);
  }

  @Test
  public void testDownloadFavorite() {
    String tagTitle1 = "Lost";
    String tagTitle2 = "Like Leaves will Fall";

    TestUtility.favoriteTag(tagTitle1 + " Soren");
    TestUtility.favoriteTag(tagTitle2 + " Tickner");

    onView(withId(R.id.nav_lists)).perform(click());

    onData(anything()).inAdapterView(withId(android.R.id.list)).atPosition(0).perform(click());

    onView(withContentDescription("More options")).perform(click());

    onView(withText("List Options")).perform(click());

    onView(withId(R.id.add_list_download_sheet)).perform(click());

    SystemClock.sleep(5000);

    Tag t = new Tag();
    t.setDownloaded(true);
    File dir = new File(t.getSheetMusicDirectory(mActivityRule.getActivity()));
    assertEquals(0, dir.listFiles().length);

    onView(withId(R.id.add_list_download_sheet)).perform(click());
    SystemClock.sleep(8000);

    assertEquals(2, dir.listFiles().length);

    onView(withId(R.id.add_list_create_button)).perform(click());

    onView(withId(R.id.nav_lists)).perform(click());

    onData(anything()).inAdapterView(withId(android.R.id.list)).atPosition(0).perform(click());

    TestUtility.unFavoriteTag(tagTitle1);
    TestUtility.unFavoriteTag(tagTitle2);

    ViewInteraction progressBar = onView(allOf(withId(android.R.id.empty), isDisplayed()));
    progressBar.check(matches(isDisplayed()));
  }
}
